--- a/nanumsquare.css
+++ b/nanumsquare.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "NanumSquare";
   font-weight: 400;
-  src: local("NanumSquareRegular"), url(NanumSquareR.eot);
+  src: local("NanumSquareR"), url(NanumSquareR.eot);
   src: url(NanumSquareR.eot?#iefix) format("embedded-opentype"),
     url(NanumSquareR.woff) format("woff"),
     url(NanumSquareR.ttf) format("truetype");
@@ -10,7 +10,7 @@
 @font-face {
   font-family: "NanumSquare";
   font-weight: 700;
-  src: local("NanumSquareBold"), url(NanumSquareB.eot);
+  src: local("NanumSquareB"), url(NanumSquareB.eot);
   src: url(NanumSquareB.eot?#iefix) format("embedded-opentype"),
     url(NanumSquareB.woff) format("woff"),
     url(NanumSquareB.ttf) format("truetype");
@@ -19,7 +19,7 @@
 @font-face {
   font-family: "NanumSquare";
   font-weight: 800;
-  src: local("NanumSquareExtraBold"), url(NanumSquareEB.eot);
+  src: local("NanumSquareEB"), url(NanumSquareEB.eot);
   src: url(NanumSquareEB.eot?#iefix) format("embedded-opentype"),
     url(NanumSquareEB.woff) format("woff"),
     url(NanumSquareEB.ttf) format("truetype");
@@ -28,7 +28,7 @@
 @font-face {
   font-family: "NanumSquare";
   font-weight: 300;
-  src: local("NanumSquareLight"), url(NanumSquareL.eot);
+  src: local("NanumSquareL"), url(NanumSquareL.eot);
   src: url(NanumSquareL.eot?#iefix) format("embedded-opentype"),
     url(NanumSquareL.woff) format("woff"),
     url(NanumSquareL.ttf) format("truetype");
