--- a/nanumsquare.css
+++ b/nanumsquare.css
@@ -1,8 +1,9 @@
 @font-face {
   font-family: "NanumSquare";
   font-weight: 400;
-  src: local("NanumSquareR"), url(NanumSquareR.eot);
-  src: url(NanumSquareR.eot?#iefix) format("embedded-opentype"),
+  src: url(NanumSquareR.eot);
+  src: local("NanumSquareR"), local("NanumSquare"),
+    url(NanumSquareR.eot?#iefix) format("embedded-opentype"),
     url(NanumSquareR.woff) format("woff"),
     url(NanumSquareR.ttf) format("truetype");
   font-display: swap;
@@ -10,8 +11,9 @@
 @font-face {
   font-family: "NanumSquare";
   font-weight: 700;
-  src: local("NanumSquareB"), url(NanumSquareB.eot);
-  src: url(NanumSquareB.eot?#iefix) format("embedded-opentype"),
+  src: url(NanumSquareB.eot);
+  src: local("NanumSquareR"), local("NanumSquare"),
+    url(NanumSquareB.eot?#iefix) format("embedded-opentype"),
     url(NanumSquareB.woff) format("woff"),
     url(NanumSquareB.ttf) format("truetype");
   font-display: swap;
@@ -19,8 +21,9 @@
 @font-face {
   font-family: "NanumSquare";
   font-weight: 800;
-  src: local("NanumSquareEB"), url(NanumSquareEB.eot);
-  src: url(NanumSquareEB.eot?#iefix) format("embedded-opentype"),
+  src: url(NanumSquareEB.eot);
+  src: local("NanumSquareEB"), local("NanumSquare"),
+    url(NanumSquareEB.eot?#iefix) format("embedded-opentype"),
     url(NanumSquareEB.woff) format("woff"),
     url(NanumSquareEB.ttf) format("truetype");
   font-display: swap;
@@ -28,8 +31,9 @@
 @font-face {
   font-family: "NanumSquare";
   font-weight: 300;
-  src: local("NanumSquareL"), url(NanumSquareL.eot);
-  src: url(NanumSquareL.eot?#iefix) format("embedded-opentype"),
+  src: url(NanumSquareL.eot);
+  src: local("NanumSquareL"), local("NanumSquare"),
+    url(NanumSquareL.eot?#iefix) format("embedded-opentype"),
     url(NanumSquareL.woff) format("woff"),
     url(NanumSquareL.ttf) format("truetype");
   font-display: swap;
