Fix the bold font

--- a/nanumsquare.css
+++ b/nanumsquare.css
@@ -12,7 +12,7 @@
   font-family: "NanumSquare";
   font-weight: 700;
   src: url(NanumSquareB.eot);
-  src: local("NanumSquareR"), local("NanumSquare"),
+  src: local("NanumSquareB"), local("NanumSquare"),
     url(NanumSquareB.eot?#iefix) format("embedded-opentype"),
     url(NanumSquareB.woff) format("woff"),
     url(NanumSquareB.ttf) format("truetype");
